# VLDB2024_ReCG

./: .gitignore  READEME.md  README.md  buildKReduce.sh  build_KREDUCE.txt  runAll.sh
Dataset/: README.md
Experiment/: README.md  checkExpStatus.py  jxplain_translator.py  kreduce_translator.py  load_json.py  runAllExperiments.sh  split_dataset.py  todays_script.sh  translate_klettke.py
ExperimentVisualization/: 0_DatasetTab.py  1.1_AccExperimentVis.py  1.2_AccExperimentAgg.py  1.3_AccExperimentTab.py  2.1_MdlExperimentVis.py  2.2_MdlExperimentAgg.py  3.1_PerformanceExperimentVis.py  3.2_PerformanceExperimentAgg.py  4.1_ParamExperimentVis.py  4.2_ParamExperimentAgg.py  5.1_MemoryExperimentVis.py  5.2_MemoryExperimentAgg.py  6.2_AblationStudyAgg.py  6.2_DesignFactors.py  7_checkDifferenceForEasierNegatives.py  8_jxplainRuntimeKeysAnalysis.py  9_analyzeRuntimeOfJxplain.py  README.md  aggregateExpResults.py  pltUtils.py  runAllExperimentVisualizations.sh
Frozza/: ArgParser.hpp  CMakeLists.txt  Darwin.cpp  Darwin.hpp  EdgeLabelledTree.cpp  EdgeLabelledTree.hpp  Initiator.cpp  Instance.cpp  Instance.hpp  RSUSConstructor.cpp  RSUSConstructor.hpp  RawSchemaAggregator.cpp  RawSchemaAggregator.hpp  RawSchemaConstructor.cpp  RawSchemaConstructor.hpp  Schema.cpp  Schema.hpp  a.txt  compile.sh  main.cpp  roaring.c  something.json  utils.cpp  utils.hpp
Frozza/build-debug/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake
Frozza/test_data/: array_anyof_test.jsonl  instance.json
(+251 files in other folders)
